2008-08-28  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/proxy.c (xim_proxy_protocol_real_xim_destroy_ic): 
	send XIM_DESTROY_IC instead of relying on the default behavior when
	unable to get imid.

	* src/factory.c (imsettings_manager_real_start_im): send "Changed"
	signal.
	(imsettings_manager_real_stop_im): likewise.

	* imsettings/imsettings-request.c (imsettings_request_send_signal_changed):
	new.

	* applet/main.c (_activate): show a notice if no default IM is setup.
	(imsettings_xim_message_filter): Update the icon when any changes made
	externally.

	* applet/radiomenuitem.c: the code cleanup.

2008-08-27  Akira TAGOH  <tagoh@redhat.com>

	* applet/imsettings-applet.desktop.in.in: new.

	* applet/main.c: XIM support.

2008-08-26  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-info.c (main): make default to see the info for IM
	currently running. (Issue#14)

	* data/xinput.sh.in.in: provide the old way to bring up IM and do that
	when dbus session isn't running.

	* data/xinput.sh.in.in: Remove the unnecessary invocation of gconftool.

	* backends/xim/proxy.c (_create_client): fallback to the default IM
	if failed.
	(xim_proxy_client_protocol_real_xim_auth_ng): new.
	(xim_proxy_client_protocol_real_xim_trigger_notify_reply):
	fix a deadlock on finalize.
	(xim_proxy_client_protocol_real_xim_set_im_values_reply): new.
	(xim_proxy_client_protocol_real_xim_get_im_values_reply): Update
	the default IM values.
	(xim_proxy_protocol_real_xim_auth_ng): new.
	(xim_proxy_protocol_real_xim_set_im_values): new.
	(xim_proxy_protocol_real_xim_forward_event): send back to the client
	application if failed.

	* backends/xim/loopback.c (xim_loopback_set_default_im_values): 
	set default IM values.
	(xim_loopback_real_xim_open): initialize the default IM values.

2008-08-22  Akira TAGOH  <akira@tagoh.org>

	* backends/xim/proxy.c (_reconnect): send XIM_ENCODING_NEGOTIATION
	to reconnect.
	(xim_proxy_client_protocol_real_xim_open_reply): relink the attribute